--Carga de repo--

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.btn-confirm {
+    background-color: #4CAF50; 
+    color: white;
+    border: none;
+    border-radius: 5px;
+  }
+  .btn-confirm:hover {
+    background-color: #45a049;
+  }
+  .btn-cancel {
+    background-color: #D2691E;  
+    border: none;
+    border-radius: 5px;
+  }
+  
+  .btn-cancel:hover {
+    background-color: #B85C1A; 
+  }
